--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             PGDATA: /data/postgres
+            POSTGRES_DB: ${POSTGRES_DB}
         volumes:
             - proj_stress_postgres:/data/postgres
         ports:
